imported impact par. literature
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5150 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -18,7 +18,7 @@ ATLAS ALFA, TDR
 In this chapter we will discuss the elastic scattering of protons from a theoretical or phenomenological point of view. After defining our terminology on the kinematics and dynamics, we will review some of the most prominent models of $pp$ and $\bar pp$ elastic scattering (see \Sc{el models}). In \Sc{el pred} we will summarize the predictions of these models for two LHC-relevant energies $\sqrt s = 7$ and $14\un{TeV}$. The last section of this chapter, \Sc{el coulomb} will be devoted to the interference between the Coulomb and hadronic interactions.
 \TODO{Move this paragraph into introduction?}
 
-Let us start by describing the kinematics of elastic scattering events. \Fg{el scat scheme} show such an event viewed in the center-of-mass (CM) frame (we will always use this frame, unless stated differently). The two incident protons (blue), each with mass $m$, momentum $p$ and energy $E$, approach each other other along the $z$ axis. After the collision, the scattered protons (red) keep the same energy $E$, but their directions are modified. They are described by the \em{scattering angle} $\th$ and \em{azimuthal angle} $\ph$, see \Fg{el scat scheme}.
+Let us start by describing the kinematics of elastic scattering events. \Fg{el scat scheme} shows such an event viewed in the center-of-mass (CM) frame (we will always use this frame, unless stated differently). The two incident protons (blue), each with mass $m$, momentum $p$ and energy $E$, approach each other other along the $z$ axis. After the collision, the scattered protons (red) keep the same energy $E$, but their directions are modified. They are described by the \em{scattering angle} $\th$ and \em{azimuthal angle} $\ph$, see \Fg{el scat scheme}.
 
 \fig{fig/pdf/el_scat_scheme.pdf}{el scat scheme}{The kinematics of a $\rm pp$ scattering event in the CM frame. The arrows represent the momenta of the incident (blue) and scattered (red) protons. The black dot in the origin marks the interaction.
 }
@@ -35,7 +35,7 @@ The definition \Eq{el t} sets bounds on the four-momentum transfer:
 \eqref{t_{\rm min} \le t \le 0\ ,\qquad t_{\rm min} = - 4p^2 \approx -s\ ,}{el t min}
 where again the high-energy approximation has been used in the last relation.
 
-The quantum theory describes particle collisions as a transition from an initial state $\ket i$ to an final state $\ket f$. The transition is reflected in the S-matrix operator $\op S$, such that the probability amplitude for the transition is given by the matrix element $\mel{f}{\op S}{i}$ (see e.g.~Sec.~4.5 in \bref{peskin} or Sec.~4.2 in \bref{formanek QM}). Were protons spin-less particles, the above-derived kinematic parameters $s$, $t$ and $\ph$ would fully describe the initial and final states (given our choice of the CM frame as shown in \Fg{el scat scheme}). However, since the protons carry spin $1/2$, we need to specify their spin states before and after the collision. For that purpose one traditionally uses the helicity $h$ -- the projection of spin into the momentum direction. Since proton's helicity can only have two values: $+1/2$ (will be denoted by symbol $+$) and $-1/2$ (denoted by $-$), there are $16$ spin amplitudes $\mel{s, t, \ph; h_{1'} h_{2'}}{\op S}{s; h_1, h_2}$. But if parity, time-reversal and proton-exchange invariance is assumed, only five of these amplitudes are independent (see e.g.~\bref{jacob59}). Explicit relations between the 16 amplitudes are summarized in (2.23) in \bref{bystricky78}. The five independent amplitudes are typically written in the following form (called \em{helicity amplitudes}):
+The quantum theory describes particle collisions as a transition from an initial state $\ket i$ to an final state $\ket f$. The transition is reflected in the S-matrix operator $\op S$, such that the probability amplitude for the transition is given by the matrix element $\mel{f}{\op S}{i}$ (see e.g.~Sec.~4.5 in \bref{peskin} or Sec.~4.2 in \bref{formanek QM}). Were the protons spin-less particles, the above-derived kinematic parameters $s$, $t$ and $\ph$ would fully describe the initial and final states (given our choice of the CM frame as shown in \Fg{el scat scheme}). However, since the protons carry spin $1/2$, we need to specify their spin states before and after the collision. For that purpose one traditionally uses the helicity $h$ -- the projection of spin into the momentum direction. Since proton's helicity can only have two values: $+1/2$ (will be denoted by symbol $+$) and $-1/2$ (denoted by $-$), there are $16$ spin amplitudes $\mel{s, t, \ph; h_{1'} h_{2'}}{\op S}{s; h_1, h_2}$. But if parity, time-reversal and proton-exchange invariance is assumed, only five of these amplitudes are independent (see e.g.~\bref{jacob59}). Explicit relations between the 16 amplitudes are summarized in (2.23) in \bref{bystricky78}. The five independent amplitudes are typically written in the following form (called \em{helicity amplitudes}):
 \eqref{\eqnarray{
 \phi_1(s, t, \ph) = \mel{++}{\op S}{++}\ ,&\quad& \phi_2(s, t, \ph) = \mel{++}{\op S}{--}\cr
 \phi_3(s, t, \ph) = \mel{+-}{\op S}{+-}\ ,&\quad& \phi_4(s, t, \ph) = \mel{+-}{\op S}{-+}\cr
@@ -47,23 +47,23 @@ Most often the experiments are performed with unpolarized beams and the spin cha
 \eqref{{\d\si\over\d t} = {\pi\over 2sp^2} \left( |\phi_1|^2 + |\phi_2|^2 + |\phi_3|^2 + |\phi_4|^2 + 4 |\phi_5|^2 \right)\ .}{el hel dsdt}
 Note that if the beams are unpolarized, there is no preferred direction in the transverse plane of the CM frame (plane $xy$ in \Fg{el scat scheme}) and consequently all azimuthal angles $\ph$ are equivalent. This means that, for unpolarized scattering, the $\ph$ distribution must be uniform. That is why we have not mentioned the $\ph$ dependence in \Eq{el hel dsdt}. We have neither indicated the cross-section dependence on $s$ -- this will be tacitly assumed in what follows.
 
-The optical theorem (see e.g.~Sec.~7.3 in \bref{peskin} or Sec.~5.1.3 in \bref{formanek QFT}) relates the total cross-section $\si_{\rm tot}$ to the amplitudes that preserve the spin states. From \Eq{el hel amp} we see that those are the amplitudes $\phi_1$ and $\phi_3$. Using the normalization from \bref{buttimore78} one can write:
+The optical theorem (see e.g.~Sec.~7.3 in \bref{peskin} or Sec.~5.1.3 in \bref{formanek QFT}) relates the total cross-section $\si_{\rm tot}$ to the forward ($t=0\un{GeV^2}$) amplitudes that preserve the spin states. From \Eq{el hel amp} we see that those are the amplitudes $\phi_1$ and $\phi_3$. Using the normalization from \bref{buttimore78} one can write:
 \eqref{\si_{\rm tot} = {2\pi\over p\sqrt s}\, \Im (\phi_1 + \phi_3)|_{t=0}\ .}{el hel si tot}
 
-Out of the five amplitudes introduced in \Eq{el hel amp}, each is of different importance. For example in Sec.~3.3 in \bref{donnachie02} the authors describe the elastic scattering by a pomeron exchange. The pomeron couples to quarks as the photon does, thus does not alter the helicity of the quarks. This does not yet mean that the proton helicity shall be conserved, since the quarks within the proton have intrinsic transverse momenta. But still, one may expect the helicity-changing amplitudes to be relatively small. Furthermore, the authors argue that the leading Regge exchanges (pomeron, $\rm\rh$, $\rm\om$, $f_2$, $a_2$) can only contribute to combinations $\phi_1+\phi_3$, $\phi_2 - \phi_4$ and $\phi_5$. Thus these amplitude combinations should be dominant at high energies. In addition, the authors express their expectation that $\phi_1 \approx \phi_3$ and $\phi_2 \approx - \phi_4$.
+Out of the five amplitudes introduced in \Eq{el hel amp}, each is of different importance. For example in Sec.~3.3 in \bref{donnachie02} the authors describe the elastic scattering by a pomeron exchange. Their pomeron couples to quarks as the photon does, thus the helicity of the quarks is not altered. This does not yet mean that the proton helicity shall be conserved -- the quarks within the proton have intrinsic transverse momenta. But still, one may expect the helicity-changing amplitudes ($\phi_2$, $\phi_4$ and $\phi_5$) to be relatively small. Furthermore, the authors argue that the leading Regge exchanges (pomeron, $\rm\rh$, $\rm\om$, $f_2$, $a_2$) can only contribute to the combinations $\phi_1+\phi_3$, $\phi_2 - \phi_4$ and $\phi_5$. Thus these amplitude combinations should be dominant at high energies. In addition, the authors express their expectation that $\phi_1 \approx \phi_3$ and $\phi_2 \approx - \phi_4$.
 
-Even stronger expectations are summarized in Sec.~3.1 in \bref{kroll78}. For the (near-)forward direction, the authors find indications that $|\phi_1 + \phi_3| \gg |\phi_2|, |\phi_1-\phi_3|, |\phi_4|$ and $|\phi_5|$. Then, quoting the authors ``the situation away from $t=0$ is not so clear-cut, but there are several indications that these inequalities continue to hold throughout the range $|t| < 0.7\un{GeV^2}$'' (at $\sqrt s = 2.8\un{GeV}$). The inequality $|\phi_1 + \phi_3| \gg |\phi_1-\phi_3|$ can only be satisfied if $|\phi_1| \approx |\phi_3|$ and $\arg\phi_1 \approx \arg\phi_3$. In short, the inequality requires $\phi_1 \approx \phi_3$, which has already been claimed in the previous paragraph. The authors conclude their observations in \bref{kroll79}: ``by far the most dominant amplitude in elastic $\rm pp$ scattering is the spin-averaged amplitude $F = (\phi_1+\phi_3)/2$''. Since $F\approx \phi_1 \approx \phi_3$, we may recast \Eq{el hel dsdt,el hel si tot} to:
+Even stronger expectations are summarized in Sec.~3.1 in \bref{kroll78}. For the (near-)forward direction, the authors find indications that $|\phi_1 + \phi_3| \gg |\phi_2|, |\phi_1-\phi_3|, |\phi_4|$ and $|\phi_5|$. Furthermore, the authors write: ``the situation away from $t=0$ is not so clear-cut, but there are several indications that these inequalities continue to hold throughout the range $|t| < 0.7\un{GeV^2}$'' (at $\sqrt s = 2.8\un{GeV}$). The inequality $|\phi_1 + \phi_3| \gg |\phi_1-\phi_3|$ can only be satisfied if $|\phi_1| \approx |\phi_3|$ and $\arg\phi_1 \approx \arg\phi_3$. In short, the inequality requires $\phi_1 \approx \phi_3$, which has already been claimed in the previous paragraph. The authors conclude their observations in \bref{kroll79}: ``by far the most dominant amplitude in elastic $\rm pp$ scattering is the spin-averaged amplitude $F = (\phi_1+\phi_3)/2$''. Since $F\approx \phi_1 \approx \phi_3$, we may recast \Eq{el hel dsdt,el hel si tot} to:
 \eqref{%
 	{\d\si\over\d t} \approx {\pi\over s p^2}\, |F|^2\ ,\qquad
 	\si_{\rm tot} \approx {4\pi\over p \sqrt{s}}\, \Im F|_{t = 0}\ .
 }{el spinless si}
-Note that these relations for differential and total cross-sections are exact for elastic scattering of spin-less particles. Therefore this approximation gives the same result as neglecting proton spins from the very beginning.
+Note that these relations for the differential and total cross-sections are exact for elastic scattering of spin-less particles. Therefore this approximation gives the same result as neglecting proton spins from the very beginning.
 
 Within this approximation, the amplitude $F$ (if analytically continued) describes $\rm pp$ as well as $\rm \bar pp$ scattering. It is a consequence of the crossing symmetry (see e.g.~Sec.~4.5 in \bref{barone}) which states that the matrix element does not change if an outgoing particle with four-momentum $P$ is replaced by an incoming antiparticle with four-momentum $-P$. This statement can be derived in quantum field theory, see e.g.~the end of Sec.~7.2 in \bref{peskin}. Then, the $\rm \bar pp$ scattering amplitude $F'(s, t)$ for the scattering from \Fg{el scat scheme}, where particles $2$ and $2'$ are anti-protons, can be related to the $\rm pp$ scattering amplitude $F(s, t)$ as follows:
 \eqref{F'(s, t) = F(4m^2 - s - t, t)\ .}{el app amp}
 Since one amplitude describes both $\rm pp$ and $\rm\bar pp$ scattering processes, one often uses the term \em{nucleon} to refer to either proton or anti-proton. Then one can simply say that the amplitude $F$ accounts for nucleon-nucleon scattering.
 
-The scattering amplitudes $\phi_i$ or $F$ reflect the interactions acting between the colliding particles. Out of the four fundamental forces only two are relevant for elastic scattering of protons. The gravity is too weak on the mass and length scales characteristic for particle physics experiments. The four-momentum transfer typical for the elastic scattering of protons is $|t| \ls 10\un{GeV^2}$. Compared to that the carriers of the weak forces are much heavier, thus the influence of the weak interaction is negligible. The contribution of the strong interaction to the scattering amplitude will be discussed in the next section, electromagnetic interaction and its interference with the strong one will be the topic of \Sc{el coulomb}.
+The scattering amplitudes $\phi_i$ or $F$ reflect the interactions acting between the colliding particles. Out of the four fundamental forces only two are relevant for elastic scattering of protons. The gravity is too weak on the mass and length scales characteristic for particle physics experiments. The four-momentum transfer typical for the elastic scattering of protons is $|t| \ls 10\un{GeV^2}$. Compared to that, the carriers of the weak forces are much heavier, thus the influence of the weak interaction is negligible. The contribution of the strong interaction to the scattering amplitude will be discussed in the next section. The electromagnetic interaction and its interference with the strong one will be the topic of \Sc{el coulomb}.
 
 \section[el models]{Hadronic models}
 
@@ -184,6 +184,11 @@ Since the degree of the polynomial in the denominator is higher by two compared 
 
 \caption{Electromagnetic scattering in eikonal description}
 
+\> \bref{adachi65,adachi66,adachi66-2,adachi66-4,adachi66-5,adachi66-3,adachi70,adachi70-2,adachi88}
+\> \bref{adachi68,adachi68-2}
+\> \bref{islam75} he obtained a unique eikonal representation valid for any energy and any scattering angle.
+\> \bref{islam67}
+
 The eikonal approximation is a high-energy and low-scattering-angle (i.e. the kinematic domain of elastic scattering at the LHC) approximation in QM (see e.g. Sec.~2.3 in \bref{barone} or Sec.~4.2.7 in \bref{formanek QM}). It relates the scattering amplitude $F(t)$ to the eikonal function $\de(b)$
 \eqref{F(t) = {s\over 2i}\int\limits_0^\infty b\,\d b\,J_0(b\sqrt{|t|})\,\left( \e^{2i\de(b)} - 1 \right)}{el eik rep}
 (using the normalization of Cahn \bref{cahn82}). The \em{eikonal} function can be calculated from a potential $V(x, y, z)$
@@ -207,9 +212,13 @@ So far, we have discussed the hadronic and electromagnetic interactions separate
 
 One of the first authors to tackle the interference problem was Bethe. In his work \bref{bethe58} he studied particle scattering by nuclei. He proposed a model based on two assumptions. First, the spatial distribution of protons and neutrons is the same. He parameterized this distribution by a Gaussian, with parameter $a$ governing its width (and thus the size of the nucleus). The second assumption is that the nuclear potential is proportional to the nucleon density. His total amplitude for $\rm pp$ and $\rm \bar pp$ scattering (upper and lower sign respectively) could be written:
 \eqref{F^{\rm C+H}(t) = \pm {\al s\over t} \e^{\i \al \Ph(t)} + F^{\rm H}(t)}{el F CH decomp C}
-with the Coulomb-hadronic phase $\Ph$
+with the \em{interference phase} $\Ph$\footnote{%
+The decomposition \Eq{el F CH decomp C} has become as traditional as calling the quantity $\Ph$ ``phase''. In Bethe's treatment it makes sense as $\Ph$ is real and $\exp(\i\al\Ph)$ is a complex unity. However, in more recent approaches (see e.g.~\Eq{el phase WY,el phase Cahn,el phase KL}) $\Ph$ gains an imaginary component. Even though, $\Ph$ is conventionally called phase and we will stick to that notation.
+}
 \eqref{\Ph_{\rm Bethe}(t) = \pm 2 \log {1.06\over a\sqrt{|t|}}\ .}{el phase bethe}
-We recall that the hadronic amplitude $F^{\rm H}(t)$ reflects Bethe's hadronic model and thus one cannot use his interference formula for a generic hadronic model. This fact may seem as a major disadvantage nowadays. We are mentioning Bethe's work because most of his successors have derived formulae formally very similar to \Eq{el F CH decomp C}. The common feature is that the total amplitude $F^{\rm C+H}(t)$ hides an infinite phase factor which is not observable in differential cross-section. In that sense, \Eq{el dsdt} is valid for $F^{\rm C+H}(t)$ but \Eq{el si tot} not.
+
+We recall that the hadronic amplitude $F^{\rm H}(t)$ reflects Bethe's hadronic model and thus one cannot use his interference formula for a generic hadronic model. This fact may seem as a major disadvantage nowadays. We are mentioning Bethe's work because most of his successors have derived formulae formally very similar to \Eq{el F CH decomp C}. The common feature is that the total amplitude $F^{\rm C+H}(t)$ hides an infinite phase factor which is not observable in the differential cross-section.
+
 
 \caption{Interference in perturbative QFT (Feynman diagrams)}
 
@@ -217,7 +226,7 @@ We recall that the hadronic amplitude $F^{\rm H}(t)$ reflects Bethe's hadronic m
 
 %Meister and Yennie \bref{yennie63}
 
-In perturbative QFT one obtains the scattering amplitude by summing all Feynman diagrams. Some of those contributing to proton-proton scattering are shown in \Fg{el diagrams}. The resulting amplitude can be written as sum in powers of the fine structure constant $\al$ (we drop the $t$-dependence momentarily to keep the expressions readable):
+In perturbative QFT one obtains the scattering amplitude by summing all relevant Feynman diagrams -- some of those contributing to proton-proton scattering are shown in \Fg{el diagrams}. Following \WaY\ \bref{wy68}, the resulting amplitude can be expanded in powers of the fine structure constant $\al$ (we drop the $t$-dependence momentarily to keep the expressions readable):
 \eqref{\FCH = \FH \left(1 + \al f^{\rm H}_1 + \ldots \right) + \FC_{\rm OPE} \left(1 + \al f^{\rm C}_1 + \ldots \right)\ .}{el wy 1}
 The second term describes the diagrams containing photon exchanges only, $\FC_{\rm OPE}(t)$ refers to the diagram \Fg{el diagrams} A. Generally speaking, all diagrams with loops containing photon propagator are IR divergent because the zero photon mass. Yennie et al. \bref{yennie61} have shown that these divergences exponentiate into factors $A_{\rm C}(t)$ and $A_{\rm H}(t)$:
 \eqref{\FCH = \FH \e^{\al A_{\rm H}} \left(1 + \al g^{\rm H}_1 + \ldots \right) + \FC_{\rm OPE} \e^{\al A_{\rm C}} \left(1 + \al g^{\rm C}_1 + \ldots \right)\ ,}{el wy 2}
@@ -239,7 +248,6 @@ where we have identified the interference phase
 Note that this phase is, by construction, a real function.
 %\TODO{$g_1$ neglected in $G^{\rm H}$ but not in $\Ph$}
 
-So far we have followed the steps of \WaY\ \bref{wy68}. Let us mention two preceding works of Rix and Thaler \bref{rix66} and Locher \bref{locher67}, both of which pursued a very similar approach. While Locher constrained himself to the case with $\FH(t) = \hbox{const}$, Rix and Thaler made no such an assumption and their final result is equivalent with the one of \WY.
 
 \WY, later on, argued that the dominant contribution to the interference phase $\Ph$ comes from the diagrams \Fg{el diagrams} C (plus the inverted one) and D. While the evaluation of the diagram D is, in principle, straight forward, the diagram C presents a major difficulty -- its evaluation requires the knowledge of $\FH(t)$ off the mass shell. In contrary, we are not aware of any hadronic model which provides also an off-shell amplitude (cf.~\Sc{el models}). The authors tried to evaluate at least a contribution to the phase $\Ph(t)$ which is independent on the off-shell amplitude. They used a number of simplifying assumptions some of which can be partially justified if the phase of the hadronic amplitude $\FH(t)$ is not rapidly varying. While this point will be discussed later on, the final result of \WY{} reads: \footnote{%
 Note that in \bref{wy68} there is a number of inconsistencies between Eq.~(17) and (23), the latter one is likely to contain a misprint: the sign of the second term shall read minus, i.e. as in our \Eq{el phase WY}.
@@ -250,6 +258,8 @@ The authors estimate the uncertainty of this formula to be of the order of $\al$
 In the time when \WY{} published their work, it seemed perfectly plausible to describe the hadronic amplitude as $\FH(t) \propto \e^{Bt/2}$, where $B$ is the diffractive slope (constant). Then the interference phase would simplify (in the limit of low scattering-angles and high energies) to
 \eqref{\Ph_{\rm SWY}(t) = \mp \left(\log {B|t|\over 2} + \ga \right) + \O{\al} \ ,}{el phase SWY}
 where $\ga \doteq 0.577$ is the Euler's constant.
+
+It is perhaps fair to mention two works that preceded the article of \WaY{} \bref{wy68} and which pursued a very similar approach. Both Rix and Thaler \bref{rix66} and Locher \bref{locher67} tried to evaluate the contribution of the diagram C in \Fg{el diagrams} in various degrees of approximation. Locher first analyzed the case with a $t$-independent hadronic amplitude $\FH=\hbox{const}$. Later he improved the approximation by admitting an exponential dependence $\FH \propto \exp(Bt)$, however he constrained himself to very forward scattering ($t\approx 0\un{GeV^2}$). In this way he avoided the troubles with $\FH$ going off mass-shell. His final result was an analogue of the simplified \WaY{} formula \Eq{el phase SWY}, but with exponential form factors included. The approach of Rix and Thaler is even more similar to the one of \WaY. Their final result resembles \Eq{el phase WY}, however the first term $\log(t/t_{\rm min})$ is replaced by $2\log\ga$. Let us remark that both Rix and Thaler and Locher, when evaluating the diagram C, replaced the internal fermion propagators by the denominator delta functions. This step was criticized by \WaY{} (see the last paragraph on page 172 in \bref{wy68}) for not being accurate.
 
 
 
