--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -565,9 +565,9 @@
 	DOI= "10.1051/jphyscol:1985294",
 	url= "http://dx.doi.org/10.1051/jphyscol:1985294",
 	journal = "J. Phys. Colloques",
-	year = 1985,
-	volume = 46,
-	number = C2,
+	year = "1985",
+	volume = "46",
+	number = "C2",
 	pages = "727-728",
 }
 
@@ -816,6 +816,232 @@
       pages          = "84-106",
       doi            = "10.1016/j.nuclphysb.2010.09.020",
       year           = "2011",
+}
+
+#----------------------------------------------------------------------------------------------------
+# Adachi et al. - eikonal representation
+
+@Article{adachi65,
+  title = "An Impact Parameter Formalism",
+  author = "ADACHI, T. and KOTANI, T.",
+  journal = "Progress of Theoretical Physics Supplement",
+  volume = "E65",
+  number = "",
+  pages = "316-331",
+  numpages = "15",
+  year = "1965",
+  doi = "10.1143/PTPS.E65.316",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi66,
+  title = "An Impact Parameter Formalism. II",
+  author = "ADACHI, T.",
+  journal = "Progress of Theoretical Physics",
+  volume = "35",
+  number = "3",
+  pages = "463-484",
+  numpages = "21",
+  year = "1966",
+  doi = "10.1143/PTP.35.463",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi66-2,
+  author = "ADACHI, T. and KOTANI, T.",
+  title = "An Impact Parameter Formalism. III",
+  journal = "Progress of Theoretical Physics",
+  volume = "35",
+  number = "3",
+  pages = "485-507",
+  numpages = "22",
+  year = "1966",
+  doi = "10.1143/PTP.35.485",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi66-3,
+  author = "ADACHI, T. and KOTANI, T.",
+  title = "Analytic Property of Impact Parameter Amplitude",
+  journal = "Progress of Theoretical Physics",
+  volume = "35",
+  number = "3",
+  pages = "576-578",
+  numpages = "2",
+  year = "1966",
+  doi = "10.1143/PTP.35.576",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi66-4,
+  author = "ADACHI, T., KOTANI, T. and TAKEDA, M.",
+  title = "Impact Parameter Formalism. IV",
+  journal = "Progress of Theoretical Physics",
+  volume = "36",
+  number = "4",
+  pages = "745-760",
+  numpages = "15",
+  year = "1966",
+  doi = "10.1143/PTP.36.745",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi66-5,
+  author = "ADACHI, T. and KOTANI, T.",
+  title = "Unitarity Relation in an Impact Parameter Representation",
+  journal = "Progress of Theoretical Physics Supplement",
+  volume = "37",
+  number = "",
+  pages = "297-305",
+  numpages = "8",
+  year = "1966",
+  doi = "10.1143/PTPS.37.297",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi70,
+     author    = "ADACHI, T.",
+     title     = "The impact parameter amplitude with a direct-channel regge
+                  pole",
+     journal   = "Prog. Theor. Phys.",
+     volume    = "44",
+     year      = "1970",
+     pages     = "1425-1427",
+     doi       = "10.1143/PTP.44.1425",
+}
+
+@Article{adachi70-2,
+     author    = "ADACHI, T.",
+     title     = "Complex angular momentum and impact parameter amplitude",
+     journal   = "Prog. Theor. Phys.",
+     volume    = "44",
+     year      = "1970",
+     pages     = "562-564",
+     doi       = "10.1143/PTP.44.562",
+}
+
+@Article{adachi88,
+     author    = "ADACHI, T., SAKAGUCHI, G. and SASABE, S.",
+     title     = "Note on a new form of impact parameter representation",
+     journal   = "Prog. Theor. Phys.",
+     volume    = "80",
+     year      = "1988",
+     pages     = "752-756",
+     doi       = "10.1143/PTP.80.752",
+}
+
+#----------------------------------------------------------------------------------------------------
+# Adachi et al. - eikonal approximation reviewed
+
+@Article{adachi68,
+  author = "ADACHI, T. and KOTANI, T.",
+  title = "An Impact Parameter Representation of the Scattering Problem",
+  journal = "Progress of Theoretical Physics",
+  volume = "39",
+  number = "2",
+  pages = "430-452",
+  numpages = "22",
+  year = "1968",
+  doi = "10.1143/PTP.39.430",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi68-2,
+  author = "ADACHI, T. and KOTANI, T.",
+  title = "An Impact Parameter Representation of the Scattering Problem",
+  journal = "Progress of Theoretical Physics",
+  volume = "39",
+  number = "3",
+  pages = "785-816",
+  numpages = "31",
+  year = "1968",
+  doi = "10.1143/PTP.39.785",
+  publisher = "Progress of Theoretical Physics"
+}
+
+#----------------------------------------------------------------------------------------------------
+# Adachi et al. - other papers
+
+@Article{adachi72,
+  author = "ADACHI, T.",
+  title = "The Eikonal Approximation in the Functional Integration Method",
+  journal = "Progress of Theoretical Physics",
+  volume = "47",
+  number = "4",
+  pages = "1432-1434",
+  numpages = "2",
+  year = "1972",
+  doi = "10.1143/PTP.47.1432",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi74,
+  author = "ADACHI, T.",
+  title = "Comment on Methods for Systematic Determination of Correction to the Glauber Amplitude",
+  journal = "Progress of Theoretical Physics",
+  volume = "52",
+  number = "6",
+  pages = "1865-1872",
+  numpages = "7",
+  year = "1974",
+  doi = "10.1143/PTP.52.1865",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi75,
+  author = "ADACHI, T.",
+  title = "Relations among L\'evy-Sucher, Schiff and Glauber Approximations in Potential Scattering",
+  journal = "Progress of Theoretical Physics",
+  volume = "53",
+  number = "2",
+  pages = "583-585",
+  numpages = "2",
+  year = "1975",
+  url = "http://ptp.ipap.jp/link?PTP/53/583/",
+  doi = "10.1143/PTP.53.583",
+  publisher = "Progress of Theoretical Physics"
+}
+
+@Article{adachi76,
+     author    = "ADACHI, T. and INAGAKI, T.",
+     title     = "On the Uniqueness of the Eikonal Phase in Potential
+                  Scattering",
+     journal   = "Prog. Theor. Phys.",
+     volume    = "55",
+     year      = "1976",
+     pages     = "951-954",
+     doi       = "10.1143/PTP.55.951",
+}
+
+@Article{adachi78,
+     author    = "ADACHI, T., INAGAKI, T. and SAKAGUCHI, G.",
+     title     = "Relation Between Eikonal Multiple Scattering Expansion and
+                  Born Series",
+     journal   = "Prog. Theor. Phys.",
+     volume    = "60",
+     year      = "1978",
+     pages     = "1602-1603",
+     doi       = "10.1143/PTP.60.1602",
+}
+
+@Article{adachi78-2,
+     author    = "ADACHI, T. and INAGAKI, T.",
+     title     = "Eikonal type approximations for potential scattering",
+     journal   = "Prog. Theor. Phys.",
+     volume    = "59",
+     year      = "1978",
+     pages     = "1956-1973",
+     doi       = "10.1143/PTP.59.1956",
+}
+
+@Article{adachi78-3,
+     author    = "ADACHI, T. and INAGAKI, T.",
+     title     = "Eikonal Type Expansions",
+     journal   = "Prog. Theor. Phys.",
+     volume    = "59",
+     year      = "1978",
+     pages     = "320-322",
+     doi       = "10.1143/PTP.59.320",
 }
 
 #--------------------------------------------- MC GENERATORS ----------------------------------------
